Yap and XSB. Scheduling strategies.

--- a/references.bib
+++ b/references.bib
@@ -1927,6 +1927,14 @@
   OPTaddress =   {Mumbai, India},
 }
 
+@InProceedings{Rocha-03c,
+  author = {R. Rocha and F. Silva and V. {Santos Costa}},
+  title = {{The YapTab Tabling System}},
+  booktitle = {Theory and Practice of Logic Programming},
+  OPTmonth = {January},
+  year = {2003}
+}
+
 @InProceedings{Rocha-04a,
   author =    {R. Rocha and F. Silva and V. {Santos Costa}},
   title =     {{Concurrent Table Accesses in Parallel Tabled Logic Programs}},
